--- a/style.css
+++ b/style.css
@@ -22,15 +22,48 @@ html, body {
   padding: 0;
   margin: 0;
   overflow: hidden;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 16px;
   background-color: #000;
-  color: #fff;
+  
 }
 
 a, a:hover, a:active, a:visited {
   text-decoration: none;
   color: inherit;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+li {
+  float: left;
+}
+
+.links {
+  padding: 14px;
+
+}
+
+li a {
+  display: block;
+  color: rgb(0,0,0);
+  text-align: center;
+  padding: 20px 15px 20px;
+  font-weight: 700;
+font-size: 16px;
+letter-spacing: 1.22px;
+  text-decoration: none;
+
+}
+
+li a:hover {
+  background-color: #111;
 }
 
 #pano {
@@ -44,7 +77,7 @@ a, a:hover, a:active, a:visited {
 
 #titleBar {
   position: absolute;
-  top: 0;
+  /*top: 0;*/
   left: 0;
   right: 40px;
   height: 40px;
@@ -79,8 +112,8 @@ body.multiple-scenes.mobile #titleBar {
   height: 100%;
   line-height: 30px;
   padding: 5px;
-  background-color: rgb(58,68,84);
-  background-color: rgba(58,68,84,0.8);
+  background-color: rgb(255,255,255);
+  background-color: rgba(255,255,255,0.8);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -103,8 +136,8 @@ body.multiple-scenes.mobile #titleBar {
   width: 40px;
   height: 40px;
   padding: 5px;
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(255,255,255);
+  background-color: rgba(255,255,255,0.8);
 }
 
 .mobile #fullscreenToggle {
@@ -148,13 +181,13 @@ body.fullscreen-enabled #fullscreenToggle {
 #autorotateToggle {
   display: block;
   position: absolute;
-  top: 0;
+  /*top: 0;*/
   right: 0;
   width: 40px;
   height: 40px;
   padding: 5px;
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(255,255,255);
+  background-color: rgba(255,255,255,0.8);
 }
 
 .mobile #autorotateToggle {
@@ -202,13 +235,13 @@ body.fullscreen-enabled.mobile #autorotateToggle {
 
 #sceneListToggle {
   position: absolute;
-  top: 0;
+  /*top: 0;*/
   left: 0;
   width: 40px;
   height: 40px;
   padding: 5px;
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(255,255,255);
+  background-color: rgba(255,255,255,0.8);
 }
 
 .mobile #sceneListToggle {
@@ -255,7 +288,7 @@ body.fullscreen-enabled.mobile #autorotateToggle {
 
 #sceneList {
   position: absolute;
-  top: 0;
+  /*top: 0;*/
   left: -220px;
   padding-top: 40px;
   width: 220px;
@@ -273,8 +306,8 @@ body.fullscreen-enabled.mobile #autorotateToggle {
 
 #sceneList .scenes {
   width: 100%;
-  background-color: rgb(58,68,84);
-  background-color: rgba(58,68,84,0.8);
+  background-color: rgb(255,255,255);
+  background-color: rgba(255,255,255,0.8);
 }
 
 .mobile #sceneList {
@@ -320,13 +353,13 @@ body.fullscreen-enabled.mobile #autorotateToggle {
 }
 
 .no-touch #sceneList .scene:hover {
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(255,255,255);
+  background-color: rgba(255,255,255,0.8);
 }
 
 #sceneList .scene.current {
-  background-color: rgb(103,115,131);
-  background-color: rgba(103,115,131,0.8);
+  background-color: rgb(255,255,255);
+  background-color: rgba(255,255,255,0.8);
 }
 
 /* Hide scene list when only a single scene exists */
@@ -376,8 +409,8 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
 
   border-radius: 5px;
 
-  background-color: rgb(58,68,84);
-  background-color: rgba(58,68,84,0.8);
+  background-color: rgb(255,255,255);
+  background-color: rgba(255,255,255,0.8);
 
   color: #fff;
 
@@ -647,6 +680,9 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
 .desktop .info-hotspot-modal {
   display: none;
 }
+
+
+
 
 .info-hotspot-modal {
   top: 0;
