--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html, body {
   overflow: hidden;
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 16px;
-  background-color: #000;
+  background-color: rgb(0, 3, 179);
 
 }
 
