--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ html, body {
 #logga {
   padding: 1em 1em;
   
-  
 }
+
 
 li[role=presentation] {
   padding: 14px 14px;
@@ -40,6 +40,11 @@ li[role=presentation] {
   
 }
   
+.mobile li[role=presentation] {
+  display: none;
+  
+}
+
 .scene {
  color: white;
 }
@@ -110,8 +115,8 @@ li a:hover {
 }
 
 .mobile #titleBar {
-  height: 50px;
-  right: 50px;
+  height: 80px;
+  
 }
 
 /* If there is a fullscreen button the title bar must make space for it */
@@ -129,7 +134,7 @@ body.multiple-scenes #titleBar {
 }
 
 body.multiple-scenes.mobile #titleBar {
-  left: 50px;
+  
 }
 
 #titleBar .sceneName {
@@ -214,6 +219,7 @@ body.fullscreen-enabled #fullscreenToggle {
 }
 
 .mobile #autorotateToggle {
+  display: none;
   width: 50px;
   height: 50px;
 }
@@ -262,6 +268,7 @@ body.fullscreen-enabled.mobile #autorotateToggle {
 .mobile #sceneListToggle {
   width: 50px;
   height: 50px;
+  display: none;
 }
 
 .mobile #sceneListToggle .icon {
@@ -303,6 +310,7 @@ body.fullscreen-enabled.mobile #autorotateToggle {
 
 .mobile #sceneList {
   padding-top: 50px;
+  display: none;
 }
 
 #sceneList .scenes {
